--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fabrix/spool-hapi",
+  "name": "@fabrix/spool-hapi-test",
   "version": "1.5.1",
   "description": "Spool - Hapi.js. This spool binds the routes compiled in spool-router to a Hapi Server.",
   "scripts": {
@@ -47,8 +47,9 @@
   ],
   "dependencies": {
     "hapi": "^17",
-    "vision": "^5.4.0",
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "sqlite": "^3.0.0",
+    "vision": "^5.4.0"
   },
   "devDependencies": {
     "@fabrix/fabrix": "^1.5.2",
@@ -63,7 +64,7 @@
     "mocha": "^5",
     "nyc": "^13.0.1",
     "smokesignals": "^3",
-    "sqlite3": "^4.0.2",
+    "sqlite3": "^4.0.0",
     "supertest": "^3.3.0",
     "tslib": "~1.9.0",
     "tslint": "~5.10.0",
